# r4it_mgpy_release

./: .gitignore  README.md  pyproject.toml
manifestguard/1.6.25/: manifest.json
manifestguard/1.6.26/: SHA256SUMS.txt  manifest.json  manifestguard-1.6.26-py3-none-any.whl
manifestguard/1.6.32/: SHA256SUMS.txt  manifest.json
manifestguard/latest/: SHA256SUMS.txt  manifest.json  manifestguard-1.6.25-py3-none-any.whl  manifestguard-1.6.26-py3-none-any.whl  manifestguard-1.6.32-py3-none-any.whl
src/manifestguard_bootstrap/: __init__.py  cli.py  installer.py
tests/: test_cli.py  test_installer.py
tools/: publish_release_payload.ps1
