[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifestguard"
version = "1.6.26"
description = "Public bootstrap installer for the protected ManifestGuard release payload"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Nejat Philip Eryigit", email = "info@ready-4-it.com" }
]
maintainers = [
    { name = "Nejat Philip Eryigit", email = "info@ready-4-it.com" }
]
keywords = ["manifestguard", "bootstrap", "installer", "release"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://github.com/timejunky/r4it_mgpy_release"
Repository = "https://github.com/timejunky/r4it_mgpy_release"
Issues = "https://github.com/timejunky/r4it_mgpy_release/issues"

[project.scripts]
manifestguard = "manifestguard_bootstrap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
